--- a/views/admin/edit.ejs
+++ b/views/admin/edit.ejs
@@ -7,6 +7,21 @@
     </div>
 </div>
 
+<div class="flash-messages mb-4">
+    <% if (successMessage && successMessage.length > 0) { %>
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+            <%= successMessage %>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    <% } %>
+    <% if (errorMessage && errorMessage.length > 0) { %>
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            <%= errorMessage %>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    <% } %>
+</div>
+
 <div class="col py-3">
     <div class="row">
         <!-- Breadcrumb -->
@@ -27,7 +42,7 @@
 </div>
 
 <!-- User Edit Form -->
-<form action="/admin/editUser/<%= user._id %>?_method=PUT" method="POST">
+<form action="/admin/editUser/<%= user._id %>?_method=PUT" method="POST" id="editProfileForm">
     <div class="row form-group mb-4">
         <div class="col">
             <label for="firstName">First Name</label>
@@ -63,7 +78,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <form action="/admin/deleteUser/<%= user._id %>?_method=DELETE" method="POST">
+                <form action="/admin/deleteUser/<%= user._id %>" method="POST">
                     <button type="submit" class="btn btn-danger">Yes, Remove User</button>
                 </form>
             </div>
