--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -4,7 +4,7 @@
     </div>
     <nav class="navbar-links">
         <a href="/">Home</a>
-        <a href="/users/profile">Profile</a>
-        <a href="/users/logout">Logout</a>
+        <a href="/user/profile">Profile</a>
+        <a href="/user/logout">Logout</a>
     </nav>
 </header>
