--- a/views/admin/edit.ejs
+++ b/views/admin/edit.ejs
@@ -42,21 +42,24 @@
 </div>
 
 <!-- User Edit Form -->
-<form action="/admin/editUser/<%= user._id %>?_method=PUT" method="POST" id="editProfileForm">
+<form id="editProfileForm" action="/admin/editUser/<%= user._id %>?_method=PUT" method="POST">
     <div class="row form-group mb-4">
         <div class="col">
             <label for="firstName">First Name</label>
-            <input type="text" class="form-control" id="firstName" name="firstName" value="<%= user.firstName %>" placeholder="First Name" required>
+            <input type="text" class="form-control" id="firstname" name="firstName" value="<%= user.firstName %>" placeholder="First Name">
+            <span id="firstnameError" class="error-message"></span>
         </div>
         <div class="col">
             <label for="lastName">Last Name</label>
-            <input type="text" class="form-control" id="lastName" name="lastName" value="<%= user.lastName %>" placeholder="Last Name" required>
+            <input type="text" class="form-control" id="lastname" name="lastName" value="<%= user.lastName %>" placeholder="Last Name">
+            <span id="lastnameError" class="error-message"></span>
         </div>
     </div>
     <div class="row form-group mb-4">
         <div class="col">
             <label for="email">Email</label>
-            <input type="email" class="form-control" id="email" name="email" value="<%= user.email %>" placeholder="Email" required>
+            <input type="email" class="form-control" id="email" name="email" value="<%= user.email %>" placeholder="Email">
+            <span id="emailError" class="error-message"></span>
         </div>
     </div>
     <div class="form-group mb-4">
@@ -85,3 +88,5 @@
         </div>
     </div>
 </div>
+
+<script src="/js/authValidation.js"></script>
